--- a/css/styles.css
+++ b/css/styles.css
@@ -62,12 +62,14 @@ h2 {font-size: 16px;
   color: #E8EAF6;
   height: 20px;
   top:0px;
+  z-index: 1;
 }
 #navBar {background: #3F51B5;
   width:100%;
   height: 60px;
   padding: 10px;
   top:20px;
+   z-index: 1;
 }
 
 #navContent {width: 100%;
@@ -80,9 +82,14 @@ height: 100%;}
   background: #FAFAFA;
   padding: 1%;
 }
-
+#scoreCards{
+  width: 80%;
+}
 /* Table Navigation */
-#matchList {width:20%;}
+#matchList {width:20%;
+  display:table;
+  position:relative;
+  top:0px;}
 table {width: 95%;}
 th {font-size: 12px;
   font-weight: lighter;
@@ -99,6 +106,9 @@ td {width:20%;
 tr:hover {background: #E0E0E0;}
 
 /* Table Button Styles */
+#addMatches{
+  margin:15px 0px;
+}
 #addMatches label {
   font-size: 10px;
 }
@@ -110,7 +120,7 @@ tr:hover {background: #E0E0E0;}
   font-size: 10px;
 }
 /* Testing styles, delete when nt needed */
-.player {width: 39%;
+.player {width: 49%;
   height:400px;
   float:right;
   margin:0% .5% .5% 0%;
