Cleaned up match enter and media queries
Added dynamic reszing to match list based on score card size, seperated
the match entering method into several smaller, more modular ones, added
a more intelligent error system, added the table/structure for the score
table.

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -1,6 +1,9 @@
 @media (max-width : 1400px) and (min-width : 1000px) {
 	#scoreCards{width:99%}
-	#matchList {width:30%}
+	#matchList {width:29%;}
+	#scoresList{ width: 69%;
+		overflow:auto;
+		margin: 1% 0% 0% 1%;}
 }
 
 @media (max-width : 1000px) and (min-width : 70px) {
@@ -15,5 +18,8 @@
 	}
 #matchData {width: 64%;}
 #navBar .button{padding: 10px}
-#matchList {width:50%}
+#matchList {width:30%}
+#scoresList{ width: 69%;
+	overflow:auto;
+	margin: 20px 0% 0px 1%;}
 }
