--- a/css/styles.css
+++ b/css/styles.css
@@ -22,9 +22,14 @@
 .none {background: none;}
 .dark {color:#616161}
 .light {color: #EEEEEE;}
-.full{width: 100%;}
-.fifth {width: 16%;}
+.full {width: 100%;}
+.half {width: 50%;}
+.third {width:33.33%;}
+.quarter {width:25%}
+.fifth {width: 20%}
+.sixth {width: 16%}
 .center {margin: auto;}
+.contain{object-fit:contain;}
 /* Page Styles */
 body {font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif}
 html {
@@ -83,7 +88,7 @@ height: 100%;}
   padding: 1%;
 }
 #scoreCards{
-  width: 80%;
+  width: 78%;
 }
 /* Table Navigation */
 #matchList {width:20%;
@@ -122,17 +127,12 @@ tr:hover {background: #E0E0E0;}
 #addMatches input {
   font-size: 10px;
 }
-/* Testing styles, delete when nt needed */
+
 .player {width: 49%;
-  height:400px;
-  float:right;
+  height:auto;
+  float:left;
   margin:0% .5% .5% 0%;
   padding:10px;}
-
-  #player1{background-color:blue;}
-  #player2{background-color: navy;}
-  #player3{background-color: red;}
-  #player4{background-color: crimson;}
 
   .navigation img {width: 50px;
     height:50px;
