--- a/css/forms.css
+++ b/css/forms.css
@@ -131,7 +131,7 @@ padding: 0 0 0 20px;
 }
 
 .title {font: 13px arial, sans-serif;
-		padding: 5px; 2%;
+		padding: 5px 2%;
 }
 
 .subtitle{font: 10px arial, sans-serif;
