--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,8 @@ tr:hover {background: #E0E0E0;}
   height:auto;
   float:left;
   margin:0% .5% .5% 0%;
-  padding:10px;}
+  padding:10px;
+  background: white;}
 
   .navigation img {width: 50px;
     height:50px;
