--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -1,9 +1,10 @@
 @media (max-width : 1400px) and (min-width : 1000px) {
 	#scoreCards{width:99%}
-	#matchList {width:29%;}
+	#matchList {width:30%;
+		margin-top:23px;}
 	#scoresList{ width: 69%;
 		overflow:auto;
-		margin: 1% 0% 0% 1%;}
+		margin: 10px 0% 0% 1%;}
 }
 
 @media (max-width : 1000px) and (min-width : 70px) {
@@ -18,7 +19,8 @@
 	}
 #matchData {width: 64%;}
 #navBar .button{padding: 10px}
-#matchList {width:30%}
+#matchList {width:30%;
+margin-top:30px;}
 #scoresList{ width: 69%;
 	overflow:auto;
 	margin: 20px 0% 0px 1%;}
