--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@ height: 100%;}
 }
 #scoreCards{
   width: 78%;
+	margin-bottom: 2%;
 }
 /* Table Navigation */
 #matchList {width:20%;
@@ -103,14 +104,15 @@ th {font-size: 12px;
   padding: 10px 5px;
   border-bottom: 1px solid #9E9E9E}
 
-td {width:20%;
+td {max-width:20%;
   padding: 10px 3px;
   border-bottom: 1px solid #EEEEEE;
   font-size: 12px;
   color: #424242;
   text-align: center;}
 
-tr:hover {background: #E0E0E0;}
+tbody tr:hover {background: #E0E0E0;}
+
 
 /* Table Button Styles */
 #addMatches{
