--- a/css/forms.css
+++ b/css/forms.css
@@ -98,6 +98,26 @@ padding: 0 0 0 20px;
   background-size: contain;
   padding-left:20px;
   height:14px;}
+
+textarea.material {
+  border:none;
+  border-bottom: 3px solid #ccc;
+  
+}
+
+textarea.material:focus {
+  outline:none;
+  border:none;
+  border-bottom: 3px solid purple;
+
+}
+  textarea {
+  	-webkit-box-sizing: border-box;
+  	-moz-box-sizing: border-box;
+  	box-sizing: border-box;
+    resize: none;
+  	width: 100%;
+  }
 /*========================================================
     Score Card input
 ========================================================*/
@@ -124,7 +144,7 @@ padding: 0 0 0 20px;
 
 .header {height: 25px;
 	width: 100%;
-	background: green;
+	background: purple;
 }
 .title, .subtitle {color: white;
 	text-transform: uppercase;
