--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@
 .sixth {width: 16%}
 .center {margin: auto;}
 .contain{object-fit:contain;}
+.select {border-bottom: 2px solid black}
 /* Page Styles */
 body {font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif}
 html {
@@ -109,10 +110,12 @@ td {max-width:20%;
   border-bottom: 1px solid #EEEEEE;
   font-size: 12px;
   color: #424242;
-  text-align: center;}
+  text-align: center;
+	white-space: nowrap;}
 
 tbody tr:hover {background: #E0E0E0;}
 
+#scores td:last-of-type{text-align: left}
 
 /* Table Button Styles */
 #addMatches{
@@ -142,3 +145,5 @@ tbody tr:hover {background: #E0E0E0;}
     background-color: #ddd;
     float:left;
   }
+* {outline:none;}
+tbody ::selection { background: white; }
